--- a/build.gradle
+++ b/build.gradle
@@ -38,5 +38,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-jetty')
 	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+	compile("commons-jxpath:commons-jxpath:1.3")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('junit:junit:4.12')
+
 }
